# aidadsp-lv2

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
common/: ExpSmoother.hpp  ValueSmoother.hpp
models/: ArchetypePliniElectricSunrise.json  README.md
models/48kHz/RNN3-LSTM-12/: ArchetypePliniElectricSunriseRiff.json
models/Deer Ink Studios/: deerinkstudios-tw40-ac-clean.json  deerinkstudios-tw40-brit-high.json
models/Helix/: Cali Texas Ch 1.json  Helix_Cali_Texas_Ch_1_A.json  Helix_PV_Panama_A.json  Helix_US_Double_Nrm_A.json  PV Panama.json  US Double Nrm.json
models/Moon/: Electric Sunrise Crunch.json  Electric Sunrise Riff.json  Electric Sunrise Solo.json  High Life Acoustic.json  MoonAcousticA.json  MoonCrunchA.json  MoonJazz.json  MoonRiffA.json  MoonSeleniumIntro.json  MoonSunriseCrunch.json  Selenium Forest Intro Lead.json  Sunhead Jazz Clean.json
models/SIMPLE-RNN/48kHz/: ArchetypePliniElectricSunriseRiff_keras.json
models/SIMPLE-RNN/48kHz/LSTM-12/: MoonAcoustic.json  MoonRiff.json  README.md
models/SIMPLE-RNN/48kHz/LSTM-12/Moon/: MoonJazz.json
models/SIMPLE-RNN/48kHz/LSTM-12/NeuralDSP_Archetype-Plini/: ElectricSunriseRiff.json
models/SIMPLE-RNN/48kHz/LSTM-12/Vintage/: VintageEdgeOfBreakup.json  VintagePedalPlatform.json  VintageUnderWater.json
models/SIMPLE-RNN/48kHz/LSTM-16/: DarkStar.json
models/SIMPLE-RNN/48kHz/LSTM-16/DarkStar/: model_HT40_48k_cond.json
models/Vintage/: VintageEdgeOfBreakupA.json  VintagePedalPlatformA.json  VintageRockRythm.json  VintageRockRythmA.json  VintageRockSolo.json  VintageRockSoloA.json  VintageUnderWaterA.json
models/deer ink studios/: tw40_blues_deluxe_deerinkstudios.json  tw40_blues_solo_deerinkstudios.json  tw40_british_lead_deerinkstudios.json  tw40_british_rhythm_deerinkstudios.json  tw40_california_crunch_deerinkstudios.json
rt-neural-generic/: CMakeLists.txt  Makefile
rt-neural-generic/src/: RTNeuralLSTM.cpp  RTNeuralLSTM.h  model_variant.hpp  rt-neural-generic.cpp  rt-neural-generic.h  uris.h
rt-neural-generic/ttl/: manifest.ttl  modgui.ttl  presets.ttl  rt-neural-generic.ttl
rt-neural-generic/ttl/modgui/: icon-gain.html  icon-rt-neural-generic.html  javascript-rt-neural-generic.js  stylesheet-gain.css  stylesheet-rt-neural-generic.css
tests/: CMakeLists.txt
tests/src/: test_lsp.cpp  test_rtneural.cpp  test_smoothers.cpp
variant/: generate_variant_hpp.py
